Ajustado os campos de busca e delete de usuário
